[workspace]

members = [
  "crates/compiler"
]

[workspace.dependencies]
swc_core                  = { version = "0.65.0" }
wasm-bindgen              = { version = "0.2.84" }
serde                     = { version = "1.0.152", features = ["derive"] }
serde_json                = { version = "1.0.94"}
serde-wasm-bindgen        = { version = "0.5.0" }
dunce                     = { version = "1.0.3" }
napi                      = { version = "2.11.2", default-features = false, features = ["napi4"] }
napi-derive               = "2.11.1"
napi-build                = "2.0.1"
lazy_static               = "1.4.0"
