[package]
name = "xbell_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.89"
swc_core =  { workspace = true, features = [
  "ecma_ast",
  "common",
  "common_concurrent",
  "common_sourcemap",
  "ecma_codegen",
  "ecma_parser",
  "ecma_preset_env",
  "ecma_transforms",
  "ecma_transforms_module",
  "ecma_transforms_react",
  "ecma_transforms_typescript",
  "ecma_quote",
  "ecma_visit",
  "ecma_visit_path",
  "ecma_utils",
  "testing",
  "base",
] }
serde = { workspace = true, features = ["derive"] }
napi = { workspace = true, default-features = false, features = ["napi4"] }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[profile.release]
lto = true
